--- a/redsheet-portal/angular.json
+++ b/redsheet-portal/angular.json
@@ -24,7 +24,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
