--- a/redsheet-portal/package.json
+++ b/redsheet-portal/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "bootstrap": "^5.1.3",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
+    "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.1.0",
     "rxjs-compat": "^6.3.3",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.4",
     "@angular/compiler-cli": "^4.1.3",
+
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
