--- a/RedSheet.Api/Properties/launchSettings.json
+++ b/RedSheet.Api/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8726/",
-      "sslPort": 0
+      "applicationUrl": "https://redsheetapi.qa.live1.dev.radixweb.net/",
+      "sslPort": 1
     }
   },
   "profiles": {
