--- a/RedSheet.Api/server-settings.json
+++ b/RedSheet.Api/server-settings.json
@@ -62,7 +62,6 @@
     //"clientUrl": "http://mynegotiations.redsheetonline.com/#/"
     //"clientUrl": "https://Redsheet-RW.positivedev.co.uk/#/"
     //"clientUrl": "https://redsheet-portal.live1.dev.radixweb.net/#/"
-    //"clientUrl": "http://redsheet-cr5.live1.dev.radixweb.net/#/",
-    "clientUrl": "http://localhost:4200/#/"
+    "clientUrl": "http://redsheet-cr5.live1.dev.radixweb.net/#/"
   }
 }
