uttam : webapp : web.config comment rewrite

--- a/redsheet-portal/src/web.config
+++ b/redsheet-portal/src/web.config
@@ -5,9 +5,9 @@
             <remove statusCode="403" subStatusCode="-1" />
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/" responseMode="ExecuteURL" />
-            <error statusCode="403" prefixLanguageFilePath="" path="https://mynegotiations-rest.redsheetonline.com" responseMode="Redirect" />
+            <error statusCode="403" prefixLanguageFilePath="" path="https://mynegotiations-rest.redsheetonline.com" />
         </httpErrors>
-			<rewrite>
+			<!-- <rewrite>
 				<rules>
 					<rule name="Redirect to HTTPS" stopProcessing="true">
 						<match url="(.*)" />
@@ -17,6 +17,6 @@
 						<action type="Redirect" url="https://{HTTP_HOST}{UNENCODED_URL}" appendQueryString="false" />
 					</rule>
 				</rules>
-			</rewrite>
+			</rewrite> -->
     </system.webServer>
 </configuration>
